# python-superconf

./: .gitignore  .pymarkdown.yml  .yamllint.yml  404.html  CONTRIBUTING.md  README.md  Taskfile.yml  index.html  mise.toml  objects.inv  poetry.toml  pyproject.toml  run_examples.sh  sitemap.xml
docs/: .adr-dir  .pymarkdown.yml  README.md  Taskfile.yml  hooks.py  mkdocs.yml
examples/: README.md  example01_basics.py  example02_field_types.py  example03_nested.py  example04_dynamic_dict.py  example05_dynamic_list.py  example06_twelve_factor.py  example07_meta_extra_fields.py  example08_shortform.py  example09_merge.py  example101_xdg.py  example10_views.py  example11_anchors.py  example_104.py  example_105.py  example_106.py  example_107.py  example_108.py  example_xdg.py
install/: index.html
lab/: run_lab.sh  test1.py  test11_bases.py  test12_bases.py  test1_bases.py  test2.py  test20_nested.py  test21_nested_wihtout_defaults.py  test22_nested_with_defaults.py  test3.py  test31_fields_types.py  test32_fieldslist.py  test3_nested.py  test4.py  test41_env_base.py  test42_env_dict.py  test43_env_list.py  test44_variadic_fields.py  test4_nested_wihtout_defaults.py  test5.py  test51_merges.py  test52_shortform.py  test53_views.py  test5_nested_with_defaults.py  test6_fields_types.py  test7_fieldslist.py  test81_anchors.py  test8_env_dict.py  test8_env_list.py  test8_variadic_fields.py
quickstart/: index.html
scripts/: release.sh  run_python_scripts.sh
search/: search_index.json
superconf/: __init__.py  anchors.py  anchors2.py  casts.py  common.py  configuration.py  (+17 more)
(+235 files in other folders)
