[tool.poetry]
name = "superconf"
version = "0.1.0"
description = "Super config for python"
authors = ["mrjk <mrjk.78@gmail.com>"]
license = "GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pyaml = "^24.12.1"


[tool.poetry.scripts]
superconf = "superconf.main:hello"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
pytest = "^8.3.4"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
